# django_crud_jquery

./: pyproject.toml
Employee/AuthApp/: urls.py  views.py
Employee/EmployeCrud/: apps.py  models.py  urls.py  views.py
Employee/EmployeCrud/migrations/: 0001_initial.py  0002_employee_image.py
Employee/Employee/: settings.py  urls.py
Employee/Templates/admin/: create.html  dashboard.html  edit.html
Employee/Templates/auth/: login.html
Employee/Templates/layouts/: header.html  master.html
